Replace Slack token with webhook URL for Challenge 59 and add generation script
- Changed Challenge59 to use CHALLENGE59_SLACK_WEBHOOK_URL instead of CHALLENGE59_SLACK_TOKEN
- Updated SlackNotificationService to use webhook URLs directly without token authentication
- Created generate-slack-webhook.sh script to easily generate new obfuscated webhook URLs
- Updated all tests to reflect the webhook URL approach
- Fixed Java 17 compatibility issues with getFirst/getLast methods across codebase
- Answer is now a deobfuscated Slack webhook URL instead of API token

Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>