@@ -13,31 +13,30 @@ class NavigatorTest {
 
   @Test
   void navigatePreviousWhenOnFirstChallenge() {
+    var challenges = challengeDefinitionsConfiguration.challenges();
     var navigation =
-        new Navigator(
-            challengeDefinitionsConfiguration.challenges(),
-            challengeDefinitionsConfiguration.challenges().getFirst());
+        new Navigator(challenges, challenges.get(0));
 
     assertThat(navigation.previous()).isEmpty();
   }
 
   @Test
   void navigateNextWhenOnLastChallenge() {
+    var challenges = challengeDefinitionsConfiguration.challenges();
     var navigation =
-        new Navigator(
-            challengeDefinitionsConfiguration.challenges(),
-            challengeDefinitionsConfiguration.challenges().getLast());
+        new Navigator(challenges, challenges.get(challenges.size() - 1));
 
     assertThat(navigation.next()).isEmpty();
   }
 
   @Test
   void navigatePreviousAndNextOnSecondChallenge() {
-    var first = challengeDefinitionsConfiguration.challenges().getFirst();
-    var second = challengeDefinitionsConfiguration.challenges().get(1);
-    var third = challengeDefinitionsConfiguration.challenges().get(2);
+    var challenges = challengeDefinitionsConfiguration.challenges();
+    var first = challenges.get(0);
+    var second = challenges.get(1);
+    var third = challenges.get(2);
 
-    var navigation = new Navigator(challengeDefinitionsConfiguration.challenges(), second);
+    var navigation = new Navigator(challenges, second);
 
     assertThat(navigation.previous()).hasValue(first);
     assertThat(navigation.next()).hasValue(third);
